@@ -1,0 +1,3 @@
+def func(x):
+    b = x + 1
+    return b + 2
